--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -271,6 +271,10 @@ input {
   color: rgb(255, 196, 88);
 }
 
+#new-event {
+  color: white;
+}
+
 .eventFont {
   color: black;
 }
@@ -288,6 +292,7 @@ input {
   border-radius: 5px;
   border-width: 5px;
   border-style: ridge;
+  margin-top: 10px;
   width: 400px;
   padding: 10px;
   margin-bottom: 1000px;
@@ -304,6 +309,14 @@ input {
   padding: 10px;
   border-radius: 10px;
   width: 314px;
+  display: inline-block
+}
+
+.repitition-container {
+  align-items: center;
+  background-color: white;
+  padding: 1px;
+  border-radius: 10px;
   display: inline-block
 }
 
