--- a/app/views/calendars/show.html.erb
+++ b/app/views/calendars/show.html.erb
@@ -14,7 +14,7 @@
     <% else %>
       <h3> 
         <%= link_to "Back to calendars", home_calendar_path %>
-        <%= button_to "Unsubscribe from this calendar", @user_calendar, method: :delete %> 
+        <%= button_to "Unsubscribe from this calendar", UserCalendar.find_by(user_id: @current_user.id), method: :delete %> 
       </h3> 
     <% end %>
     </section>
