--- a/app/views/courses/_form.html.erb
+++ b/app/views/courses/_form.html.erb
@@ -12,13 +12,14 @@
       </div>
     <% end %>
 
+
     <div class="input-group input-group-sm mb-3">
       <%= form.label :calendar_id, style: "display: block" %>
-      <%= form.select :calendar_id, Calendar.all.collect { |calendar| [calendar.calendar_name, calendar.id]}, include_blank:true %>
+      <%= form.select :calendar_id, CalendarHelper.load_calendars(current_user[:id]), include_blank:true %>
     </div>
 
     <div class="input-group input-group-sm mb-3">
-      <span class='input-group-text'>Name</span>
+      <%= form.label :name, style: "display: block" %>
       <%= form.text_field :name %>
     </div>
 
@@ -33,6 +34,16 @@
     </div>
 
     <div class="input-group input-group-sm mb-3">
+      <%= form.label :start_time, style: "display: block" %>
+      <%= form.time_field :start_time, value: "%I:%M%p" %>
+    </div>
+
+    <div class="input-group input-group-sm mb-3">
+      <%= form.label :end_time, style: "display: block" %>
+      <%= form.time_field :end_time, value: "%I:%M%p"%>
+    </div>
+
+    <div class="input-group input-group-sm mb-3">
       <%= form.label :location, style: "display: block" %>
       <%= form.text_field :location %>
     </div>
@@ -42,12 +53,16 @@
       <%= form.text_field :professor_name %>
     </div>
 
-    <div>
-      <%= form.label :repetition_frequency, style: "display: block" %>
-      <% days_of_week = ["M", "T", "W", "Th", "F", "Sa", "Su"] %>
-      <% choices = [] %>
-      
-      <%= form.select(choices, days_of_week.each {|day| day }, {:prompt => "Please Select"}, {:multiple => true, :size => 5}) %>
+    <div class="form-group">
+        <%= form.label :Meeting_Days %>
+
+          <%= form.check_box :repetition_frequency, { multiple: true }, 'M', false %>M
+          <%= form.check_box :repetition_frequency, { multiple: true }, 'T', false %>T
+          <%= form.check_box :repetition_frequency, { multiple: true }, 'W', false %>W
+          <%= form.check_box :repetition_frequency, { multiple: true }, 'H', false %>Th
+          <%= form.check_box :repetition_frequency, { multiple: true }, 'F', false %>F
+          <%= form.check_box :repetition_frequency, { multiple: true }, 'S', false %>Sa
+          <%= form.check_box :repetition_frequency, { multiple: true }, 'U', false %>Su
     </div>
 
     <div class="input-group input-group-sm mb-3">
