--- a/app/views/calendars/_calendar.html.erb
+++ b/app/views/calendars/_calendar.html.erb
@@ -8,7 +8,7 @@
 
   <p>
     <strong>Creator:</strong>
-    <%= creatorname(calendar)%>
+     <%=  User.find_by(id: calendar.user_id).first_name + " " + User.find_by(id: calendar.user_id).last_name %>
   </p>
 
   <p>
