--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -30,6 +30,10 @@
               </li>
             </ul>
           </li>
+          <form class = "form-inline my-2 my-lg-0" action="/search">
+            <input class = "form-control mr-sm-2" type = "text" placeholder="Search a calendar" aria-label = "Search">
+            <button class = "btn btn-outline-success my-2 my-sm-0" type="submit"> Search </button> 
+          </form>  
         <% else %>
           <li><%= link_to "Log in", login_path %></li>
         <% end %>
