update unsubscribe function

--- a/app/views/calendars/_calendar.html.erb
+++ b/app/views/calendars/_calendar.html.erb
@@ -5,6 +5,10 @@
     <strong>Name:</strong>
     <%= calendar.calendar_name %>
   </p>
+  <p>
+    <strong>Description:</strong>
+    <%= calendar.description %>
+  </p>
 
   <p>
     <strong>Creator:</strong>
