--- a/app/views/calendars/index.html.erb
+++ b/app/views/calendars/index.html.erb
@@ -3,26 +3,21 @@
   <thead>
     <tr>
       <th>Name</th>
+      <th>Description</th>
       <th>Owner</th>
       <th>Public</th>
-      <%# <th>Token</th> %>
       <th colspan="3"></th>
     </tr>
   </thead>
 
   <tbody>
-   
-    <% current_user.user_calendars.each do |calendar| %>
+    <% UserCalendar.where(user_id:Current.user.id).each do |calendar| %>
       <tr>
         <td><%= calendar.calendar.calendar_name %></td>
+        <td><%= calendar.calendar.description %></td>
         <td><%= User.find_by(id: calendar.calendar.user_id).first_name + " " + User.find_by(id: calendar.calendar.user_id).last_name %></td>
-        <%# <><%= calendar.user_first_name %>
         <td><%= calendar.calendar.shared %></td>
-        <%# <><%= calendar.invite_token %>
-        <%# change show to copy token %>
         <td><%= link_to 'Details', calendar.calendar %></td>
-        <%# <td><%= link_to 'Edit', edit_calendar_path(calendar) %>
-        <%# <td><%= link_to 'Destroy', calendar, method: :delete %>
       </tr>
     <% end %>
   </tbody>
