--- a/app/views/calendars/search.html.erb
+++ b/app/views/calendars/search.html.erb
@@ -5,9 +5,8 @@
   <thead>
     <tr>
       <th>Calendar Name</th>
+      <th>Description</th>
       <th>Creator</th>
-      <th>Event</th>
-      <th>Subscribe</th>
       <th colspan="4"></th>
     </tr>
   </thead>
@@ -17,9 +16,10 @@
     <% @calendars.each do |calendar| %>
       <tr>
         <td><%= calendar.calendar_name %></td>
+        <td><%= calendar.description %></td>
         <td><%=  User.find_by(id: calendar.user_id).first_name + " " + User.find_by(id: calendar.user_id).last_name %></td>
-        <td><%= Assignment.find_by(calendar_id: calendar.id).name %></td>
-        <td><%= button_to "Subscribe to this calendar", UserCalendar.where(user_id: Current.user.id, calendar_id: calendar.id).first_or_create%></td>
+        <td><%= button_to "Subscribe to this calendar", UserCalendar.where(user_id: Current.user.id, calendar_id: calendar.id).first_or_create%> <td>
+       
       </tr>
     <% end %>
   </tbody>
