--- a/app/views/home/calendar.html.erb
+++ b/app/views/home/calendar.html.erb
@@ -54,4 +54,9 @@
         <%= render 'day_buttons', :day => @day %>
         <%= render 'day', :day => @day %>
     <% end %>
+    <form name="myform">
+<br>
+  <textarea name="outputtext" rows="1" column="2"></textarea>
+  <%= button_tag 'Subscribe to the calendar', type: 'button', class: 'btn-default', :onclick => "addtext()" %>
+</form>
 </div>
