add google login gem

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -14,3 +14,5 @@
 <%= link_to "Calender View", home_calendar_path, class: "btn btn-lg btn-primary" %>
 </section>
 
+<%= google_sign_in_button 'Sign in with my Google account', proceed_to: create_login_url %>
+
