update calendar schema

--- a/app/views/calendars/_calendar.html.erb
+++ b/app/views/calendars/_calendar.html.erb
@@ -3,7 +3,12 @@
 <div id="<%= calendar %>">
   <p>
     <strong>Name:</strong>
-    <%= calendar.calendar_name %>
+    <%= calendar.name %>
+  </p>
+
+  <p>
+    <strong>Description:</strong>
+    <%= calendar.description %>
   </p>
 
   <p>
