--- a/app/views/calendars/_form.html.erb
+++ b/app/views/calendars/_form.html.erb
@@ -12,8 +12,13 @@
   <% end %>
 
   <div>
-    <%= form.label :calendar_name, style: "display: block" %>
-    <%= form.text_field :calendar_name %>
+    <%= form.label :name, style: "display: block" %>
+    <%= form.text_field :name %>
+  </div>
+
+    <div>
+    <%= form.label :description, style: "display: block" %>
+    <%= form.text_field :description %>
   </div>
 
   <div>
