--- a/app/views/calendars/index.html.erb
+++ b/app/views/calendars/index.html.erb
@@ -3,6 +3,7 @@
   <thead>
     <tr>
       <th>Name</th>
+      <th>Description</th>
       <th>Owner</th>
       <th>Public</th>
       <%# <th>Token</th> %>
@@ -13,7 +14,8 @@
   <tbody>
     <% @calendars.each do |calendar| %>
       <tr>
-        <td><%= calendar.calendar_name %></td>
+        <td><%= calendar.name %></td>
+        <td><%= calendar.description %></td>
         <td><%= calendar.users.first.first_name + " " +calendar.users.first.last_name%></td>
         <%# <><%= calendar.user_first_name %>
         <td><%= calendar.shared %></td>
