--- a/app/views/calendars/index.html.erb
+++ b/app/views/calendars/index.html.erb
@@ -1,4 +1,3 @@
-
 <table class="table">
   <thead>
     <tr>
@@ -6,24 +5,18 @@
       <th>Description</th>
       <th>Owner</th>
       <th>Public</th>
-      <%# <th>Token</th> %>
       <th colspan="3"></th>
     </tr>
   </thead>
 
   <tbody>
-    <% @calendars.each do |calendar| %>
+    <% UserCalendar.where(user_id:Current.user.id).each do |calendar| %>
       <tr>
-        <td><%= calendar.name %></td>
-        <td><%= calendar.description %></td>
-        <td><%= calendar.users.first.first_name + " " +calendar.users.first.last_name%></td>
-        <%# <><%= calendar.user_first_name %>
-        <td><%= calendar.shared %></td>
-        <%# <><%= calendar.invite_token %>
-        <%# change show to copy token %>
-        <td><%= link_to 'Details', calendar %></td>
-        <%# <td><%= link_to 'Edit', edit_calendar_path(calendar) %>
-        <%# <td><%= link_to 'Destroy', calendar, method: :delete %>
+        <td><%= calendar.calendar.name %></td>
+        <td><%= calendar.calendar.description %></td>
+        <td><%= User.find_by(id: calendar.calendar.user_id).first_name + " " + User.find_by(id: calendar.calendar.user_id).last_name %></td>
+        <td><%= calendar.calendar.shared %></td>
+        <td><%= link_to 'Details', calendar.calendar %></td>
       </tr>
     <% end %>
   </tbody>
