copypaste link to subscribe

--- a/app/views/home/calendar.html.erb
+++ b/app/views/home/calendar.html.erb
@@ -54,4 +54,11 @@
         <%= render 'day_buttons', :day => @day %>
         <%= render 'day', :day => @day %>
     <% end %>
+    <form name="myform">
+    <br>
+        <textarea name="outputtext" rows="1" column="2"></textarea>
+        <%# <button type="button" value="submit" class="submit" id="test"  >submit</button> %>
+          <a type="button" value="submit" class="test" id="test"> Submit </a>
+        <%# <button type= 'button', class= 'btn-default', id="subscribe-link"> Subscribe to the calendar  </button> %>
+    </form>
 </div>
