subscribe calendar link

--- a/app/views/home/calendar.html.erb
+++ b/app/views/home/calendar.html.erb
@@ -57,8 +57,6 @@
     <form name="myform">
     <br>
         <textarea name="outputtext" rows="1" column="2"></textarea>
-        <%# <button type="button" value="submit" class="submit" id="test"  >submit</button> %>
-          <a type="button" value="submit" class="test" id="test"> Submit </a>
-        <%# <button type= 'button', class= 'btn-default', id="subscribe-link"> Subscribe to the calendar  </button> %>
+        <button type="button" value="submit" class="subscribe" id="subscribe"> Subscribe to a calendar </button>
     </form>
 </div>
