--- a/app/views/calendars/_calendar.html.erb
+++ b/app/views/calendars/_calendar.html.erb
@@ -1,6 +1,6 @@
 
 
-<div id="<%= calendar %>">
+<div id="<%= calendar %>" class = "calendar-overview">
   <p>
     <strong>Name:</strong>
     <%= calendar.name %>
