--- a/app/views/calendars/index.html.erb
+++ b/app/views/calendars/index.html.erb
@@ -1,11 +1,11 @@
-<table class="table">
+<table class="table calendar-list-page">
   <thead>
     <tr>
       <th>Name</th>
       <th>Description</th>
       <th>Owner</th>
       <th>Public</th>
-      <th colspan="3"></th>
+      <th>Details</th>
     </tr>
   </thead>
 
