--- a/app/views/calendars/_form.html.erb
+++ b/app/views/calendars/_form.html.erb
@@ -1,3 +1,4 @@
+<div class="container event-box" align="center">
 <%= form_with(model: calendar) do |form| %>
   <% if calendar.errors.any? %>
     <div style="color: red">
@@ -10,23 +11,23 @@
       </ul>
     </div>
   <% end %>
-
-  <div>
+  <div class="input-group input-group-sm mb-3" >
     <%= form.label :name, style: "display: block" %>
     <%= form.text_field :name %>
   </div>
 
-    <div>
+    <div class="input-group input-group-sm mb-3">
     <%= form.label :description, style: "display: block" %>
     <%= form.text_field :description %>
   </div>
 
-  <div>
-    <%= form.label :shared, style: "display: block" %>
+  <div class="input-group input-group-sm mb-3">
+    <%= form.label :public, style: "display: block" %>
     <%= form.check_box :shared %>
   </div>
 
-  <div>
-    <%= form.submit %>
+  <div class="input-group input-group-sm mb-3">
+    <%= form.submit "Create", class:"btn btn-sm btn-primary" %>
   </div>
+<div>
 <% end %>
