--- a/app/views/calendars/index.html.erb
+++ b/app/views/calendars/index.html.erb
@@ -21,3 +21,7 @@
     <% end %>
   </tbody>
 </table>
+<%# redirect to search page %>
+<div class="input-group input-group-sm mb-3">
+  <%= link_to "Subscribe to more calendars", subscribe_url, class:"btn btn-sm btn-primary" %>
+</div>
