--- a/app/views/calendars/index.html.erb
+++ b/app/views/calendars/index.html.erb
@@ -1,5 +1,7 @@
 <table class="table calendar-list-page">
+  
   <thead>
+    <h3 class = "container" style = "text-align: center"> Current Subscribed Calendars </h3>
     <tr>
       <th>Name</th>
       <th>Description</th>
@@ -22,6 +24,6 @@
   </tbody>
 </table>
 <%# redirect to search page %>
-<div class="input-group input-group-sm mb-3">
+<div class="input-group input-group-sm mb-3 search-calendar-button">
   <%= link_to "Subscribe to more calendars", subscribe_url, class:"btn btn-sm btn-primary" %>
 </div>
