--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -12,8 +12,8 @@
       </div>
       <ul id="navbar-menu"
           class="nav navbar-nav navbar-right collapse navbar-collapse">
-        <li><%= link_to "Home", root_path %></li>
         <% if logged_in? %>
+          <li><%= link_to "Calendar", home_calendar_url %></li>
           <li><%= link_to "Users", users_path %></li>
           <li class="dropdown">
             <a href="#" id="account" class="dropdown-toggle">
@@ -31,6 +31,7 @@
             </ul>
           </li>
         <% else %>
+          <li><%= link_to "Home", root_path %></li>
           <li><%= link_to "Log in", login_path %></li>
         <% end %>
       </ul>
