--- a/app/views/static_pages/subscribe.html.erb
+++ b/app/views/static_pages/subscribe.html.erb
@@ -1,7 +1,7 @@
 <div class="container new-calendar-page" align="center">
     <div>
         <h1> Subscribe to More Calendars </h1>
-            <h4> Option 1: Paste the calendar token link and search </h4>
+            <h4> Option 1: Paste the calendar token link and subscribe </h4>
             <form name="myform" class="form-inline">
                 <textarea name="outputtext" rows="1" column="2" placeholder="Paste the calendar link"></textarea>
                 <button type="submit" value="submit" class="subscribe btn btn-sm btn-primary" id="subscribe"> Subscribe to the calendar </button>
