delete courses index

--- a/app/views/courses/_form.html.erb
+++ b/app/views/courses/_form.html.erb
@@ -63,6 +63,10 @@
           <%= form.check_box :repetition_frequency, { multiple: true }, 'F', false %>F
           <%= form.check_box :repetition_frequency, { multiple: true }, 'S', false %>Sa
           <%= form.check_box :repetition_frequency, { multiple: true }, 'U', false %>Su
-    </div>    
+    </div> 
+
+    <div class="input-group input-group-sm mb-3">
+      <%= form.submit :Update, class:"btn btn-lg btn-primary" %>
+    </div>
   <% end %>
 </div>
