--- a/app/views/static_pages/subscribe.html.erb
+++ b/app/views/static_pages/subscribe.html.erb
@@ -9,7 +9,7 @@
             <h4> Option 2: Search keywords for public calendars </h4>
             <form class = "form-inline" action="/search">
                 <input name ="q" rows="1" type = "text" placeholder="Search a public calendar" aria-label = "Search">
-                <button class = "btn btn-sm btn-primary" type="submit" > Search </button> 
+                <button class = "btn btn-sm btn-primary" type="search"> Search </button> 
             </form>
         </div>
 </div>
