--- a/app/views/calendars/edit.html.erb
+++ b/app/views/calendars/edit.html.erb
@@ -6,5 +6,5 @@
 
 <div>
   <%= link_to "Show this calendar", @calendar %> |
-  <%= link_to "Back to calendars", home_calendar_path %>
+  <%= link_to "Back to Calendar View", home_calendar_path %>
 </div>
