--- a/app/views/calendars/show.html.erb
+++ b/app/views/calendars/show.html.erb
@@ -109,7 +109,7 @@
     <% if Calendar.find_by(id: @calendar.id).user_id == Current.user.id %>
       <h3>
         <%= link_to "Edit this calendar", edit_calendar_path(@calendar), class:"btn btn-sm btn-primary"%> |
-        <%= link_to "Back to calendars", home_calendar_path, class:"btn btn-sm btn-primary"%>
+        <%= link_to "Back to Calendar List", calendars_path, class:"btn btn-sm btn-primary"%>
         <div class="delete-button">
         <%= button_to "Delete this calendar", @calendar, method: :delete, class:"btn btn-sm btn-primary"%> 
         </div>
@@ -128,9 +128,17 @@
       <h3> 
         <%= button_to "Unsubscribe from this calendar", UserCalendar.find_by(user_id: @current_user.id, calendar_id: @calendar.id), method: :delete, class:"btn btn-sm btn-primary"%> 
         <div class="delete-button">
-          <%= link_to "Back to calendars", home_calendar_path, class:"btn btn-sm btn-primary" %>
+          <%= link_to "Back to Calendar List", calendars_path, class:"btn btn-sm btn-primary" %>
         <div>
       </h3> 
+    <% else%>  
+    <div>
+    <%= form_tag subscribe_calendar_user_calendars_url, multipart: true do %>
+      <%= hidden_field_tag :calendar_id , @calendar.id %>
+      <%= submit_tag "Subscribe to this calendar", class:"btn btn-sm btn-primary subscribe-button" %>
+    <% end %>
+    </div>
+     <%= link_to "Back to Calendar List", calendars_path, class:"btn btn-sm btn-primary" %>
     <% end %>
     </section>
     
