--- a/app/views/calendars/index.html.erb
+++ b/app/views/calendars/index.html.erb
@@ -1,11 +1,13 @@
-<table class="table">
+<table class="table calendar-list-page">
+  
   <thead>
+    <h3 class = "container" style = "text-align: center"> Current Subscribed Calendars </h3>
     <tr>
       <th>Name</th>
       <th>Description</th>
       <th>Owner</th>
       <th>Public</th>
-      <th colspan="3"></th>
+      <th>Details</th>
     </tr>
   </thead>
 
@@ -21,3 +23,7 @@
     <% end %>
   </tbody>
 </table>
+<%# redirect to search page %>
+<div class="input-group input-group-sm mb-3 search-calendar-button">
+  <%= link_to "Subscribe to more calendars", subscribe_url, class:"btn btn-sm btn-primary" %>
+</div>
