--- a/app/views/calendars/search.html.erb
+++ b/app/views/calendars/search.html.erb
@@ -1,13 +1,12 @@
-<div style="padding-top: 10px"> 
 <h1> Search Results </h1>
 
-<table class="table">
+<table class="table calendar-list-page">
   <thead>
     <tr>
       <th>Calendar Name</th>
       <th>Description</th>
       <th>Creator</th>
-      <th colspan="4"></th>
+      <th>Details</th>
     </tr>
   </thead>
 
@@ -15,11 +14,10 @@
    
     <% @calendars.each do |calendar| %>
       <tr>
-        <td><%= calendar.name %></td>
+        <td><%= link_to calendar.name, calendar%></td>
         <td><%= calendar.description %></td>
         <td><%=  User.find_by(id: calendar.user_id).first_name + " " + User.find_by(id: calendar.user_id).last_name %></td>
-        <td><%= button_to "Subscribe to this calendar", UserCalendar.where(user_id: Current.user.id, calendar_id: calendar.id).first_or_create%> <td>
-       
+        <td><%= link_to "Details", calendar%></td>
       </tr>
     <% end %>
   </tbody>
