--- a/app/views/home/calendar.html.erb
+++ b/app/views/home/calendar.html.erb
@@ -25,7 +25,7 @@
             <%= link_to "New other event", new_other_event_path %>
             </li>
         </ul>
-        <%= link_to "create a new calendar", new_calendar_path, class: "btn btn-sm btn-primary" %>
+        <%= link_to "Create a New Calendar", new_calendar_path, class: "btn btn-sm btn-primary" %>
         </div>
     </div>
 
@@ -54,9 +54,4 @@
         <%= render 'day_buttons', :day => @day %>
         <%= render 'day', :day => @day %>
     <% end %>
-    <form name="myform">
-    <br>
-        <textarea name="outputtext" rows="1" column="2"></textarea>
-        <button type="button" value="submit" class="subscribe" id="subscribe"> Subscribe to a calendar </button>
-    </form>
 </div>
