--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -12,8 +12,8 @@
       </div>
       <ul id="navbar-menu"
           class="nav navbar-nav navbar-right collapse navbar-collapse">
-        <li><%= link_to "Home", root_path %></li>
         <% if logged_in? %>
+          <li><%= link_to "Calendar", home_calendar_url %></li>
           <li><%= link_to "Users", users_path %></li>
           <li class="dropdown">
             <a href="#" id="account" class="dropdown-toggle">
@@ -30,11 +30,8 @@
               </li>
             </ul>
           </li>
-          <form class = "form-inline my-2 my-lg-0" action="/search" style = "display: flex; flex-direction: row; ">
-            <input class = "form-control mr-sm-2" name ="q" type = "text" placeholder="Search a public calendar" aria-label = "Search">
-            <button class = "btn btn-outline-success my-2 my-sm-0" type="submit" style=" width: 100px; height: 35px;"> Search </button> 
-          </form>
         <% else %>
+          <li><%= link_to "Home", root_path %></li>
           <li><%= link_to "Log in", login_path %></li>
         <% end %>
       </ul>
