--- a/app/views/holidays/_form.html.erb
+++ b/app/views/holidays/_form.html.erb
@@ -2,8 +2,6 @@
   <%= form_with(model: holiday) do |form| %>
     <% if holiday.errors.any? %>
       <div style="color: red">
-        <h2><%= pluralize(holiday.errors.count, "error") %> prohibited this holiday from being saved:</h2>
-
         <ul>
           <% holiday.errors.each do |error| %>
             <li><%= error.full_message %></li>
@@ -24,7 +22,7 @@
 
     <div class="input-group input-group-sm mb-3">
       <%= form.label :date, style: "display: block" %>
-      <%= form.datetime_field :date %>
+      <%= form.date_field :date %>
     </div>
 
     <div class="input-group input-group-sm mb-3">
@@ -33,7 +31,7 @@
     </div>
 
     <div class="input-group input-group-sm mb-3">
-      <%= form.submit :Update, class:"btn btn-lg btn-primary" %>
+      <%= form.submit :Create, class:"btn btn-lg btn-primary" %>
     </div>
   <% end %>
 </div>
