--- a/app/views/home/_day.html.erb
+++ b/app/views/home/_day.html.erb
@@ -1,7 +1,7 @@
 <div>
     <% require_relative '../../lib/day.rb' %>
     <% require_relative '../../lib/event.rb' %>
-    <% paths = {holiday: holidays_url, assignment: assignments_url,
+    <% paths = {calendar:calendars_url, assignment: assignments_url,
     class_period: class_periods_url, other_event: other_events_url} %>
     <div>
         <% if day %>
