--- a/app/views/holidays/show.html.erb
+++ b/app/views/holidays/show.html.erb
@@ -12,11 +12,11 @@
 </div>
 
 <div>
-  <%= link_to "Edit", edit_holiday_path(@holiday), class:"btn btn-sm btn-primary" %> |
+  <%= link_to "Edit",edit_calendar_holiday_path(Calendar.find_by(id: @holiday.calendar_id).invite_token, @holiday.slug), class:"btn btn-sm btn-primary" %> |
   <%= link_to "Back", home_calendar_path(date: params[:date], view: :month), class:"btn btn-sm btn-primary"%>
 
   <div class="delete-button">
-    <%= button_to "Delete this assignment", @holiday, method: :delete, class:"btn btn-sm btn-primary" %>
+    <%= button_to  "Delete this holiday", calendar_holiday_path, method: :delete, class:"btn btn-sm btn-primary" %>
   </div>
 </div>
 </div>
