--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -14,3 +14,4 @@
 <%= link_to "Calender View", home_calendar_path, class: "btn btn-lg btn-primary" %>
 </section>
 
+<%= button_to "Log in with Google", '/auth/google_oauth2'  %>
