--- a/app/views/class_periods/_form.html.erb
+++ b/app/views/class_periods/_form.html.erb
@@ -28,7 +28,7 @@
     </div>
 
     <div class="input-group input-group-sm mb-3">
-      <%= form.submit :Update, class:"btn btn-lg btn-primary" %>
+      <%= form.submit :Create, class:"btn btn-lg btn-primary" %>
     </div>
   <% end %>
 </div>
