--- a/app/views/class_periods/show.html.erb
+++ b/app/views/class_periods/show.html.erb
@@ -3,7 +3,7 @@
 <p style="color: green"><%= notice %></p>
 
 <div>
-  <p><%= @class_period.name %></p>
+  <h1><%= @class_period.name %></h1>
 </div>
 
 <div>
