--- a/app/views/other_events/_form.html.erb
+++ b/app/views/other_events/_form.html.erb
@@ -29,7 +29,7 @@
 
     <div class="input-group input-group-sm mb-3>
       <%= form.label :start_time %>
-      <%= form.time_field :start_time %>
+      <%= form.time_field %>
     </div>
 
     <div class="input-group input-group-sm mb-3">
@@ -38,7 +38,7 @@
     </div>
 
     <div class="input-group input-group-sm mb-3">
-      <%= form.submit :Update, class:"btn btn-lg btn-primary" %>
+      <%= form.submit :Create, class:"btn btn-lg btn-primary" %>
     </div>
   <% end %>
 </div>
