--- a/app/views/assignments/_form.html.erb
+++ b/app/views/assignments/_form.html.erb
@@ -17,6 +17,17 @@
       <%= form.select :calendar_id, CalendarHelper.load_calendars(current_user[:id]), include_blank:true %>
     </div>
 
+    <%= link_to "Create a New Calendar", new_calendar_path %>
+    <br><br>
+
+    <div class="input-group input-group-sm mb-3">
+      <%= form.label :course_id, style: "display: block" %>
+      <%= form.select :calendar_id, CalendarHelper.load_courses(current_user[:id]), include_blank:true %>
+    </div>
+
+    <%= link_to "Create a New Course", new_course_path %>
+    <br><br>
+
     <div class="input-group input-group-sm mb-3">
       <%= form.label :name, style: "display: block" %>
       <%= form.text_field :name %>
@@ -28,12 +39,7 @@
     </div>
 
     <div class="input-group input-group-sm mb-3">
-      <%= form.label :course_id, style: "display: block" %>
-      <%= form.select :calendar_id, CalendarHelper.load_calendars(current_user[:id]), include_blank:true %>
-    </div>
-
-    <div class="input-group input-group-sm mb-3">
-      <%= form.submit :Update, class:"btn btn-lg btn-primary" %>
+      <%= form.submit :Create, class:"btn btn-lg btn-primary" %>
     </div>
   <% end %>
 </div>
