--- a/app/views/courses/_form.html.erb
+++ b/app/views/courses/_form.html.erb
@@ -18,6 +18,9 @@
       <%= form.select :calendar_id, CalendarHelper.load_calendars(current_user[:id]), include_blank:true %>
     </div>
 
+    <%= link_to "Create a New Calendar", new_calendar_path %>
+    <br><br>
+
     <div class="input-group input-group-sm mb-3">
       <%= form.label :name, style: "display: block" %>
       <%= form.text_field :name %>
@@ -44,11 +47,6 @@
     </div>
 
     <div class="input-group input-group-sm mb-3">
-      <%= form.label :location, style: "display: block" %>
-      <%= form.text_field :location %>
-    </div>
-
-    <div class="input-group input-group-sm mb-3">
       <%= form.label :professor_name, style: "display: block" %>
       <%= form.text_field :professor_name %>
     </div>
@@ -66,7 +64,7 @@
     </div> 
 
     <div class="input-group input-group-sm mb-3">
-      <%= form.submit :Update, class:"btn btn-lg btn-primary" %>
+      <%= form.submit :Create, class:"btn btn-lg btn-primary" %>
     </div>
   <% end %>
 </div>
