--- a/app/views/home/calendar.html.erb
+++ b/app/views/home/calendar.html.erb
@@ -7,7 +7,7 @@
             <h3>Select a Date</h3>
             <input id="datepicker" type="date" name="date" value=<% @day.currentDate %> min="2000-01-01" max="2100-12-31">
             <br>
-            <input class="btn btn-sm btn-primary" id="datepicker-submit" type="submit"/>
+            <input class="btn btn-sm btn-primary" id="datepicker-submit" value="Find" type="submit"/>
         </form>
 
     <div>
