--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -23,17 +23,17 @@
     </div>
 
     <div class="input-group input-group-sm mb-3">
-      <%= form.label :student_id, style: "display: block" %>
-      <%= form.number_field :student_id %>
-    </div>
-
-    <div class="input-group input-group-sm mb-3">
       <%= form.label :email, style: "display: block" %>
       <%= form.text_field :email %>
     </div>
-
+    
+    <br>
     <div class="input-group input-group-sm mb-3">
       <%= form.submit :Save, class:"btn btn-lg btn-primary" %>
     </div>
+
+    <br>
+    <%= button_to "Delete this user", @user, method: :delete %>
+
   <% end %>
 </div>
