--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -20,7 +20,7 @@
         <%= f.label :password %>
         <%= f.password_field :password, class: 'form-control' %>
 
-        <%= f.label :password_confirmation, "Confirmation" %>
+        <%= f.label :password_confirmation, "Confirm Password" %>
         <%= f.password_field :password_confirmation, class: 'form-control' %>
 
         <%= f.submit "Create my account", class: "btn btn-primary" %>
